# ss_lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  create_single_header.sh  ss_lib.pc  ss_lib.pc.in  valgrind.supp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: update-benchmark-badge.sh
.github/workflows/: benchmark.yml  benchmarks.yml  build.yml  ci-enhanced.yml  ci-old.yml  ci.yml  release.yml
benchmarks/: benchmark_ss_lib.c  run_benchmarks.sh  visualize.py
docs/: README.md  api-reference.md  architecture.md  configuration.md  design.md  embedded-guide.md  examples.md  getting-started.md  performance.md
examples/: example_embedded.c  example_embedded_simple.c  example_usage.c
include/: ss_config.h  ss_lib.h  ss_lib_single.h  ss_lib_v2.h
packaging/aur/: PKGBUILD
src/: ss_lib.c  ss_lib_c89.c  ss_lib_v2.c
tests/: test_basic.c  test_simple.c  test_ss_lib.c  test_v2_simple.c
